// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphQL operation coverage > separates declared mutation gaps from unregistered introspected mutation roots 1`] = `
{
  "declaredGaps": [
    "bulkOperationCancel",
    "bulkOperationRunMutation",
    "bulkOperationRunQuery",
    "consentPolicyUpdate",
    "customerPaymentMethodCreateFromDuplicationData",
    "customerPaymentMethodCreditCardCreate",
    "customerPaymentMethodCreditCardUpdate",
    "customerPaymentMethodGetDuplicationData",
    "customerPaymentMethodGetUpdateUrl",
    "customerPaymentMethodPaypalBillingAgreementCreate",
    "customerPaymentMethodPaypalBillingAgreementUpdate",
    "customerPaymentMethodRemoteCreate",
    "customerPaymentMethodRevoke",
    "customerSegmentMembersQueryCreate",
    "discountAutomaticAppCreate",
    "discountAutomaticAppUpdate",
    "discountAutomaticBulkDelete",
    "discountAutomaticBxgyCreate",
    "discountAutomaticBxgyUpdate",
    "discountCodeAppCreate",
    "discountCodeAppUpdate",
    "discountCodeBulkActivate",
    "discountCodeBulkDeactivate",
    "discountCodeBulkDelete",
    "discountCodeBxgyCreate",
    "discountCodeBxgyUpdate",
    "discountCodeRedeemCodeBulkDelete",
    "discountRedeemCodeBulkAdd",
    "fulfillmentEventCreate",
    "fulfillmentOrderAcceptCancellationRequest",
    "fulfillmentOrderAcceptFulfillmentRequest",
    "fulfillmentOrderCancel",
    "fulfillmentOrderClose",
    "fulfillmentOrderHold",
    "fulfillmentOrderLineItemsPreparedForPickup",
    "fulfillmentOrderMerge",
    "fulfillmentOrderMove",
    "fulfillmentOrderOpen",
    "fulfillmentOrderRejectCancellationRequest",
    "fulfillmentOrderRejectFulfillmentRequest",
    "fulfillmentOrderReleaseHold",
    "fulfillmentOrderReschedule",
    "fulfillmentOrderSplit",
    "fulfillmentOrdersSetFulfillmentDeadline",
    "fulfillmentOrderSubmitCancellationRequest",
    "fulfillmentOrderSubmitFulfillmentRequest",
    "marketingActivitiesDeleteAllExternal",
    "marketingActivityCreate",
    "marketingActivityCreateExternal",
    "marketingActivityDeleteExternal",
    "marketingActivityUpdate",
    "marketingActivityUpdateExternal",
    "marketingActivityUpsertExternal",
    "marketingEngagementCreate",
    "marketingEngagementsDelete",
    "metafieldDefinitionCreate",
    "metafieldDefinitionDelete",
    "metafieldDefinitionUpdate",
    "metaobjectBulkDelete",
    "metaobjectCreate",
    "metaobjectDelete",
    "metaobjectUpdate",
    "metaobjectUpsert",
    "orderEditAddShippingLine",
    "orderEditRemoveShippingLine",
    "orderEditUpdateShippingLine",
    "paymentReminderSend",
    "paymentTermsCreate",
    "paymentTermsDelete",
    "paymentTermsUpdate",
    "privacyFeaturesDisable",
    "shopifyPaymentsPayoutAlternateCurrencyCreate",
    "webhookSubscriptionCreate",
    "webhookSubscriptionDelete",
    "webhookSubscriptionUpdate",
    "webPresenceDelete",
  ],
  "unregistered": [
    "abandonmentUpdateActivitiesDeliveryStatuses",
    "appPurchaseOneTimeCreate",
    "appRevokeAccessScopes",
    "appSubscriptionCancel",
    "appSubscriptionCreate",
    "appSubscriptionLineItemUpdate",
    "appSubscriptionTrialExtend",
    "appUninstall",
    "appUsageRecordCreate",
    "articleCreate",
    "articleDelete",
    "articleUpdate",
    "backupRegionUpdate",
    "blogCreate",
    "blogDelete",
    "blogUpdate",
    "bulkProductResourceFeedbackCreate",
    "cartTransformCreate",
    "cartTransformDelete",
    "collectionAddProductsV2",
    "combinedListingUpdate",
    "commentApprove",
    "commentDelete",
    "commentNotSpam",
    "commentSpam",
    "companiesDelete",
    "companyAddressDelete",
    "companyAssignCustomerAsContact",
    "companyAssignMainContact",
    "companyContactAssignRole",
    "companyContactAssignRoles",
    "companyContactCreate",
    "companyContactDelete",
    "companyContactRemoveFromCompany",
    "companyContactRevokeRole",
    "companyContactRevokeRoles",
    "companyContactsDelete",
    "companyContactSendWelcomeEmail",
    "companyContactUpdate",
    "companyCreate",
    "companyDelete",
    "companyLocationAssignAddress",
    "companyLocationAssignRoles",
    "companyLocationAssignStaffMembers",
    "companyLocationCreate",
    "companyLocationDelete",
    "companyLocationRemoveStaffMembers",
    "companyLocationRevokeRoles",
    "companyLocationsDelete",
    "companyLocationTaxSettingsUpdate",
    "companyLocationUpdate",
    "companyRevokeMainContact",
    "companyUpdate",
    "customerCancelDataErasure",
    "customerRequestDataErasure",
    "dataSaleOptOut",
    "delegateAccessTokenCreate",
    "delegateAccessTokenDestroy",
    "deliveryCustomizationActivation",
    "deliveryCustomizationCreate",
    "deliveryCustomizationDelete",
    "deliveryCustomizationUpdate",
    "deliveryPromiseParticipantsUpdate",
    "deliveryPromiseProviderUpsert",
    "deliverySettingUpdate",
    "disputeEvidenceUpdate",
    "draftOrderBulkAddTags",
    "draftOrderBulkDelete",
    "draftOrderBulkRemoveTags",
    "draftOrderCalculate",
    "draftOrderInvoicePreview",
    "eventBridgeServerPixelUpdate",
    "fileAcknowledgeUpdateFailed",
    "flowGenerateSignature",
    "flowTriggerReceive",
    "fulfillmentConstraintRuleCreate",
    "fulfillmentConstraintRuleDelete",
    "fulfillmentConstraintRuleUpdate",
    "giftCardCreate",
    "giftCardCredit",
    "giftCardDeactivate",
    "giftCardDebit",
    "giftCardSendNotificationToCustomer",
    "giftCardSendNotificationToRecipient",
    "giftCardUpdate",
    "inventoryMoveQuantities",
    "inventorySetQuantities",
    "inventoryShipmentAddItems",
    "inventoryShipmentCreate",
    "inventoryShipmentCreateInTransit",
    "inventoryShipmentDelete",
    "inventoryShipmentMarkInTransit",
    "inventoryShipmentReceive",
    "inventoryShipmentRemoveItems",
    "inventoryShipmentSetTracking",
    "inventoryShipmentUpdateItemQuantities",
    "inventoryTransferCancel",
    "inventoryTransferCreate",
    "inventoryTransferCreateAsReadyToShip",
    "inventoryTransferDelete",
    "inventoryTransferDuplicate",
    "inventoryTransferEdit",
    "inventoryTransferMarkAsReadyToShip",
    "inventoryTransferRemoveItems",
    "inventoryTransferSetItems",
    "locationLocalPickupDisable",
    "locationLocalPickupEnable",
    "menuCreate",
    "menuDelete",
    "menuUpdate",
    "mobilePlatformApplicationCreate",
    "mobilePlatformApplicationDelete",
    "mobilePlatformApplicationUpdate",
    "orderDelete",
    "orderEditAddCustomItem",
    "orderEditAddLineItemDiscount",
    "orderEditRemoveDiscount",
    "orderEditUpdateDiscount",
    "orderRiskAssessmentCreate",
    "pageCreate",
    "pageDelete",
    "pageUpdate",
    "priceListCreate",
    "priceListDelete",
    "priceListFixedPricesAdd",
    "priceListFixedPricesByProductUpdate",
    "priceListFixedPricesDelete",
    "priceListFixedPricesUpdate",
    "priceListUpdate",
    "productBundleCreate",
    "productBundleUpdate",
    "productFeedCreate",
    "productFeedDelete",
    "productFullSync",
    "productJoinSellingPlanGroups",
    "productLeaveSellingPlanGroups",
    "productOptionsReorder",
    "productReorderMedia",
    "productVariantAppendMedia",
    "productVariantDetachMedia",
    "productVariantJoinSellingPlanGroups",
    "productVariantLeaveSellingPlanGroups",
    "productVariantRelationshipBulkUpdate",
    "productVariantsBulkReorder",
    "publicationCreate",
    "publicationDelete",
    "publicationUpdate",
    "pubSubServerPixelUpdate",
    "quantityPricingByVariantUpdate",
    "quantityRulesAdd",
    "quantityRulesDelete",
    "removeFromReturn",
    "returnApproveRequest",
    "returnCancel",
    "returnClose",
    "returnCreate",
    "returnDeclineRequest",
    "returnProcess",
    "returnReopen",
    "returnRequest",
    "reverseDeliveryCreateWithShipping",
    "reverseDeliveryShippingUpdate",
    "reverseFulfillmentOrderDispose",
    "savedSearchCreate",
    "savedSearchDelete",
    "savedSearchUpdate",
    "scriptTagCreate",
    "scriptTagDelete",
    "scriptTagUpdate",
    "sellingPlanGroupAddProducts",
    "sellingPlanGroupAddProductVariants",
    "sellingPlanGroupCreate",
    "sellingPlanGroupDelete",
    "sellingPlanGroupRemoveProducts",
    "sellingPlanGroupRemoveProductVariants",
    "sellingPlanGroupUpdate",
    "serverPixelCreate",
    "serverPixelDelete",
    "shippingPackageDelete",
    "shippingPackageMakeDefault",
    "shippingPackageUpdate",
    "shopLocaleDisable",
    "shopLocaleEnable",
    "shopLocaleUpdate",
    "shopResourceFeedbackCreate",
    "stagedUploadsCreate",
    "storeCreditAccountCredit",
    "storeCreditAccountDebit",
    "storefrontAccessTokenCreate",
    "storefrontAccessTokenDelete",
    "subscriptionBillingAttemptCreate",
    "subscriptionBillingCycleBulkCharge",
    "subscriptionBillingCycleBulkSearch",
    "subscriptionBillingCycleCharge",
    "subscriptionBillingCycleContractDraftCommit",
    "subscriptionBillingCycleContractDraftConcatenate",
    "subscriptionBillingCycleContractEdit",
    "subscriptionBillingCycleEditDelete",
    "subscriptionBillingCycleEditsDelete",
    "subscriptionBillingCycleScheduleEdit",
    "subscriptionBillingCycleSkip",
    "subscriptionBillingCycleUnskip",
    "subscriptionContractActivate",
    "subscriptionContractAtomicCreate",
    "subscriptionContractCancel",
    "subscriptionContractCreate",
    "subscriptionContractExpire",
    "subscriptionContractFail",
    "subscriptionContractPause",
    "subscriptionContractProductChange",
    "subscriptionContractSetNextBillingDate",
    "subscriptionContractUpdate",
    "subscriptionDraftCommit",
    "subscriptionDraftDiscountAdd",
    "subscriptionDraftDiscountCodeApply",
    "subscriptionDraftDiscountRemove",
    "subscriptionDraftDiscountUpdate",
    "subscriptionDraftFreeShippingDiscountAdd",
    "subscriptionDraftFreeShippingDiscountUpdate",
    "subscriptionDraftLineAdd",
    "subscriptionDraftLineRemove",
    "subscriptionDraftLineUpdate",
    "subscriptionDraftUpdate",
    "taxAppConfigure",
    "themeCreate",
    "themeDelete",
    "themeFilesCopy",
    "themeFilesDelete",
    "themeFilesUpsert",
    "themePublish",
    "themeUpdate",
    "translationsRegister",
    "translationsRemove",
    "urlRedirectBulkDeleteAll",
    "urlRedirectBulkDeleteByIds",
    "urlRedirectBulkDeleteBySavedSearch",
    "urlRedirectBulkDeleteBySearch",
    "urlRedirectCreate",
    "urlRedirectDelete",
    "urlRedirectImportCreate",
    "urlRedirectImportSubmit",
    "urlRedirectUpdate",
    "validationCreate",
    "validationDelete",
    "validationUpdate",
    "webPixelCreate",
    "webPixelDelete",
    "webPixelUpdate",
  ],
}
`;

exports[`GraphQL operation coverage > snapshots introspected Admin GraphQL mutations that are not formally supported yet 1`] = `
[
  "abandonmentUpdateActivitiesDeliveryStatuses",
  "appPurchaseOneTimeCreate",
  "appRevokeAccessScopes",
  "appSubscriptionCancel",
  "appSubscriptionCreate",
  "appSubscriptionLineItemUpdate",
  "appSubscriptionTrialExtend",
  "appUninstall",
  "appUsageRecordCreate",
  "articleCreate",
  "articleDelete",
  "articleUpdate",
  "backupRegionUpdate",
  "blogCreate",
  "blogDelete",
  "blogUpdate",
  "bulkOperationCancel",
  "bulkOperationRunMutation",
  "bulkOperationRunQuery",
  "bulkProductResourceFeedbackCreate",
  "cartTransformCreate",
  "cartTransformDelete",
  "collectionAddProductsV2",
  "combinedListingUpdate",
  "commentApprove",
  "commentDelete",
  "commentNotSpam",
  "commentSpam",
  "companiesDelete",
  "companyAddressDelete",
  "companyAssignCustomerAsContact",
  "companyAssignMainContact",
  "companyContactAssignRole",
  "companyContactAssignRoles",
  "companyContactCreate",
  "companyContactDelete",
  "companyContactRemoveFromCompany",
  "companyContactRevokeRole",
  "companyContactRevokeRoles",
  "companyContactsDelete",
  "companyContactSendWelcomeEmail",
  "companyContactUpdate",
  "companyCreate",
  "companyDelete",
  "companyLocationAssignAddress",
  "companyLocationAssignRoles",
  "companyLocationAssignStaffMembers",
  "companyLocationCreate",
  "companyLocationDelete",
  "companyLocationRemoveStaffMembers",
  "companyLocationRevokeRoles",
  "companyLocationsDelete",
  "companyLocationTaxSettingsUpdate",
  "companyLocationUpdate",
  "companyRevokeMainContact",
  "companyUpdate",
  "consentPolicyUpdate",
  "customerCancelDataErasure",
  "customerPaymentMethodCreateFromDuplicationData",
  "customerPaymentMethodCreditCardCreate",
  "customerPaymentMethodCreditCardUpdate",
  "customerPaymentMethodGetDuplicationData",
  "customerPaymentMethodGetUpdateUrl",
  "customerPaymentMethodPaypalBillingAgreementCreate",
  "customerPaymentMethodPaypalBillingAgreementUpdate",
  "customerPaymentMethodRemoteCreate",
  "customerPaymentMethodRevoke",
  "customerRequestDataErasure",
  "customerSegmentMembersQueryCreate",
  "dataSaleOptOut",
  "delegateAccessTokenCreate",
  "delegateAccessTokenDestroy",
  "deliveryCustomizationActivation",
  "deliveryCustomizationCreate",
  "deliveryCustomizationDelete",
  "deliveryCustomizationUpdate",
  "deliveryPromiseParticipantsUpdate",
  "deliveryPromiseProviderUpsert",
  "deliverySettingUpdate",
  "discountAutomaticAppCreate",
  "discountAutomaticAppUpdate",
  "discountAutomaticBulkDelete",
  "discountAutomaticBxgyCreate",
  "discountAutomaticBxgyUpdate",
  "discountCodeAppCreate",
  "discountCodeAppUpdate",
  "discountCodeBulkActivate",
  "discountCodeBulkDeactivate",
  "discountCodeBulkDelete",
  "discountCodeBxgyCreate",
  "discountCodeBxgyUpdate",
  "discountCodeRedeemCodeBulkDelete",
  "discountRedeemCodeBulkAdd",
  "disputeEvidenceUpdate",
  "draftOrderBulkAddTags",
  "draftOrderBulkDelete",
  "draftOrderBulkRemoveTags",
  "draftOrderCalculate",
  "draftOrderInvoicePreview",
  "eventBridgeServerPixelUpdate",
  "fileAcknowledgeUpdateFailed",
  "flowGenerateSignature",
  "flowTriggerReceive",
  "fulfillmentConstraintRuleCreate",
  "fulfillmentConstraintRuleDelete",
  "fulfillmentConstraintRuleUpdate",
  "fulfillmentEventCreate",
  "fulfillmentOrderAcceptCancellationRequest",
  "fulfillmentOrderAcceptFulfillmentRequest",
  "fulfillmentOrderCancel",
  "fulfillmentOrderClose",
  "fulfillmentOrderHold",
  "fulfillmentOrderLineItemsPreparedForPickup",
  "fulfillmentOrderMerge",
  "fulfillmentOrderMove",
  "fulfillmentOrderOpen",
  "fulfillmentOrderRejectCancellationRequest",
  "fulfillmentOrderRejectFulfillmentRequest",
  "fulfillmentOrderReleaseHold",
  "fulfillmentOrderReschedule",
  "fulfillmentOrderSplit",
  "fulfillmentOrdersSetFulfillmentDeadline",
  "fulfillmentOrderSubmitCancellationRequest",
  "fulfillmentOrderSubmitFulfillmentRequest",
  "giftCardCreate",
  "giftCardCredit",
  "giftCardDeactivate",
  "giftCardDebit",
  "giftCardSendNotificationToCustomer",
  "giftCardSendNotificationToRecipient",
  "giftCardUpdate",
  "inventoryMoveQuantities",
  "inventorySetQuantities",
  "inventoryShipmentAddItems",
  "inventoryShipmentCreate",
  "inventoryShipmentCreateInTransit",
  "inventoryShipmentDelete",
  "inventoryShipmentMarkInTransit",
  "inventoryShipmentReceive",
  "inventoryShipmentRemoveItems",
  "inventoryShipmentSetTracking",
  "inventoryShipmentUpdateItemQuantities",
  "inventoryTransferCancel",
  "inventoryTransferCreate",
  "inventoryTransferCreateAsReadyToShip",
  "inventoryTransferDelete",
  "inventoryTransferDuplicate",
  "inventoryTransferEdit",
  "inventoryTransferMarkAsReadyToShip",
  "inventoryTransferRemoveItems",
  "inventoryTransferSetItems",
  "locationLocalPickupDisable",
  "locationLocalPickupEnable",
  "marketingActivitiesDeleteAllExternal",
  "marketingActivityCreate",
  "marketingActivityCreateExternal",
  "marketingActivityDeleteExternal",
  "marketingActivityUpdate",
  "marketingActivityUpdateExternal",
  "marketingActivityUpsertExternal",
  "marketingEngagementCreate",
  "marketingEngagementsDelete",
  "menuCreate",
  "menuDelete",
  "menuUpdate",
  "metafieldDefinitionCreate",
  "metafieldDefinitionDelete",
  "metafieldDefinitionUpdate",
  "metaobjectBulkDelete",
  "metaobjectCreate",
  "metaobjectDelete",
  "metaobjectUpdate",
  "metaobjectUpsert",
  "mobilePlatformApplicationCreate",
  "mobilePlatformApplicationDelete",
  "mobilePlatformApplicationUpdate",
  "orderDelete",
  "orderEditAddCustomItem",
  "orderEditAddLineItemDiscount",
  "orderEditAddShippingLine",
  "orderEditRemoveDiscount",
  "orderEditRemoveShippingLine",
  "orderEditUpdateDiscount",
  "orderEditUpdateShippingLine",
  "orderRiskAssessmentCreate",
  "pageCreate",
  "pageDelete",
  "pageUpdate",
  "paymentReminderSend",
  "paymentTermsCreate",
  "paymentTermsDelete",
  "paymentTermsUpdate",
  "priceListCreate",
  "priceListDelete",
  "priceListFixedPricesAdd",
  "priceListFixedPricesByProductUpdate",
  "priceListFixedPricesDelete",
  "priceListFixedPricesUpdate",
  "priceListUpdate",
  "privacyFeaturesDisable",
  "productBundleCreate",
  "productBundleUpdate",
  "productFeedCreate",
  "productFeedDelete",
  "productFullSync",
  "productJoinSellingPlanGroups",
  "productLeaveSellingPlanGroups",
  "productOptionsReorder",
  "productReorderMedia",
  "productVariantAppendMedia",
  "productVariantDetachMedia",
  "productVariantJoinSellingPlanGroups",
  "productVariantLeaveSellingPlanGroups",
  "productVariantRelationshipBulkUpdate",
  "productVariantsBulkReorder",
  "publicationCreate",
  "publicationDelete",
  "publicationUpdate",
  "pubSubServerPixelUpdate",
  "quantityPricingByVariantUpdate",
  "quantityRulesAdd",
  "quantityRulesDelete",
  "removeFromReturn",
  "returnApproveRequest",
  "returnCancel",
  "returnClose",
  "returnCreate",
  "returnDeclineRequest",
  "returnProcess",
  "returnReopen",
  "returnRequest",
  "reverseDeliveryCreateWithShipping",
  "reverseDeliveryShippingUpdate",
  "reverseFulfillmentOrderDispose",
  "savedSearchCreate",
  "savedSearchDelete",
  "savedSearchUpdate",
  "scriptTagCreate",
  "scriptTagDelete",
  "scriptTagUpdate",
  "sellingPlanGroupAddProducts",
  "sellingPlanGroupAddProductVariants",
  "sellingPlanGroupCreate",
  "sellingPlanGroupDelete",
  "sellingPlanGroupRemoveProducts",
  "sellingPlanGroupRemoveProductVariants",
  "sellingPlanGroupUpdate",
  "serverPixelCreate",
  "serverPixelDelete",
  "shippingPackageDelete",
  "shippingPackageMakeDefault",
  "shippingPackageUpdate",
  "shopifyPaymentsPayoutAlternateCurrencyCreate",
  "shopLocaleDisable",
  "shopLocaleEnable",
  "shopLocaleUpdate",
  "shopResourceFeedbackCreate",
  "stagedUploadsCreate",
  "storeCreditAccountCredit",
  "storeCreditAccountDebit",
  "storefrontAccessTokenCreate",
  "storefrontAccessTokenDelete",
  "subscriptionBillingAttemptCreate",
  "subscriptionBillingCycleBulkCharge",
  "subscriptionBillingCycleBulkSearch",
  "subscriptionBillingCycleCharge",
  "subscriptionBillingCycleContractDraftCommit",
  "subscriptionBillingCycleContractDraftConcatenate",
  "subscriptionBillingCycleContractEdit",
  "subscriptionBillingCycleEditDelete",
  "subscriptionBillingCycleEditsDelete",
  "subscriptionBillingCycleScheduleEdit",
  "subscriptionBillingCycleSkip",
  "subscriptionBillingCycleUnskip",
  "subscriptionContractActivate",
  "subscriptionContractAtomicCreate",
  "subscriptionContractCancel",
  "subscriptionContractCreate",
  "subscriptionContractExpire",
  "subscriptionContractFail",
  "subscriptionContractPause",
  "subscriptionContractProductChange",
  "subscriptionContractSetNextBillingDate",
  "subscriptionContractUpdate",
  "subscriptionDraftCommit",
  "subscriptionDraftDiscountAdd",
  "subscriptionDraftDiscountCodeApply",
  "subscriptionDraftDiscountRemove",
  "subscriptionDraftDiscountUpdate",
  "subscriptionDraftFreeShippingDiscountAdd",
  "subscriptionDraftFreeShippingDiscountUpdate",
  "subscriptionDraftLineAdd",
  "subscriptionDraftLineRemove",
  "subscriptionDraftLineUpdate",
  "subscriptionDraftUpdate",
  "taxAppConfigure",
  "themeCreate",
  "themeDelete",
  "themeFilesCopy",
  "themeFilesDelete",
  "themeFilesUpsert",
  "themePublish",
  "themeUpdate",
  "translationsRegister",
  "translationsRemove",
  "urlRedirectBulkDeleteAll",
  "urlRedirectBulkDeleteByIds",
  "urlRedirectBulkDeleteBySavedSearch",
  "urlRedirectBulkDeleteBySearch",
  "urlRedirectCreate",
  "urlRedirectDelete",
  "urlRedirectImportCreate",
  "urlRedirectImportSubmit",
  "urlRedirectUpdate",
  "validationCreate",
  "validationDelete",
  "validationUpdate",
  "webhookSubscriptionCreate",
  "webhookSubscriptionDelete",
  "webhookSubscriptionUpdate",
  "webPixelCreate",
  "webPixelDelete",
  "webPixelUpdate",
  "webPresenceDelete",
]
`;
